--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,5 +6,6 @@ html,
 body {
   height: 100%;
   color: #efeff3;
-  background: linear-gradient(to top rigth, #0f0104, #1f0a14) #0f0104;
+  background: linear-gradient(to top rigth, #0f0104, #1f0a14), #0f0104;
+  position: relative;
 }
