--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,7 +5,7 @@
 html,
 body {
   height: 100%;
-  color: #efeff3;
+  color: rgb(2, 2, 16);
   background: linear-gradient(to top rigth, #0f0104, #1f0a14), #0f0104;
   position: relative;
 }
