--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,
+body {
   height: 100%;
   color: #efeff3;
   background: linear-gradient(to top right, #0f0104, #1f0a14), #0f0104;
