--- a/src/components/layout/sidebar/Sidebar.module.scss
+++ b/src/components/layout/sidebar/Sidebar.module.scss
@@ -1,4 +1,4 @@
 .sidebar {
   @apply flex items-center flex-col justify-between border-r-2;
-  border-color: rgba(255, 255, 255, 0.1)
+  border-color: rgba(175, 159, 159, 0.1);
 }
